<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bus_selection"
            android:icon="@drawable/ic_bus"
            android:title="@string/bus_selection_item" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_item" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback_item" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_item" />
        <item
            android:id="@+id/exit"
            android:title="Вихід"/>
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item> -->

</menu>
