<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.vita.wat_ch.fraqments.auth.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sing_up"
            android:textSize="40sp"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/editTextEmailSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editTextPasswordSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="@dimen/marginTop"
            android:gravity="center"
            android:text="@string/register"/>


        <Button
            android:id="@+id/btnSingInFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/already_reg"
            android:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/progressBarSingUp"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="insideInset"
            android:visibility="gone"/>
    </LinearLayout>

</FrameLayout>
